...
import androidx.lifecycle.viewmodel.compose.viewModel
import com.github.swent.swisstravel.R
import com.github.swent.swisstravel.ui.composable.Counter

/** Test tags for UI tests to identify components. */
object TripTravelersTestTags {
  const val NEXT = "next"
  const val TRIP_TRAVELERS_SCREEN = "tripTravelersScreen"
}

/**
 * Screen where users can set the number of travelers for their trip.
 *
...
