...
import com.github.swent.swisstravel.ui.composable.PreferenceSelector
import com.github.swent.swisstravel.ui.composable.PreferenceToggle
import kotlinx.coroutines.flow.collectLatest

/** Test tags for UI tests to identify components. */
object TripPreferencesTestTags {
  const val DONE = "done"
  const val TRIP_PREFERENCES_SCREEN = "tripPreferencesScreen"
  const val TRIP_PREFERENCES_TITLE = "tripPreferencesTitle"
}

/**
 * Screen where users can set their trip preferences.
...
